unpackaged/main/default/objects/ET_Tyre_Wallet__c/ET_Tyre_Wallet__c.object-meta.xml
<CustomObject>
    <label>ET Tyre Wallet</label>
    <nameField>
        <displayFormat>WN-{0000}</displayFormat>
        <label>ET Tyre Wallet Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ET Tyre Wallets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>