unpackaged/main/default/objects/ET_Tyre_Wallet__c/fields/CaseNumber__c.field-meta.xml
<CustomField>
    <fullName>CaseNumber__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>ET Tyre Wallets</relationshipLabel>
    <relationshipName>ET_Tyre_Wallets</relationshipName>
    <type>Lookup</type>
</CustomField>