unpackaged/main/default/objects/ET_Tyre_Wallet__c/fields/Quotation__c.field-meta.xml
<CustomField>
    <fullName>Quotation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quotation</label>
    <referenceTo>ETT_Quotation__c</referenceTo>
    <relationshipLabel>ET Tyre Wallets</relationshipLabel>
    <relationshipName>ET_Tyre_Wallets</relationshipName>
    <type>Lookup</type>
</CustomField>