unpackaged/main/default/objects/ET_Tyre_Wallet__c/fields/Traffic_Fine_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Traffic_Fine_Total_Amount__c</fullName>
    <label>Traffic Fine Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>