unpackaged/main/default/objects/ET_Tyre_Wallet__c/fields/Tyre_Fine_Amount__c.field-meta.xml
<CustomField>
    <fullName>Tyre_Fine_Amount__c</fullName>
    <label>Tyre Fine Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>